GH-583 Add MeteringIntervalUtil to keep mappings consistent